.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
10:47:41 **** Incremental Build of configuration Debug for project sensor_hub_106_thingspeak_sensor ****
make 
APP_NAME = sensor_hub_106_thingspeak_sensor
SOC = quark_se
TARGET = x86
APP_DIR = .
BUILD = debug
CSTD = c99
VERSION = '1.4.0'
make -C ./bsp/drivers SOC=quark_se TARGET=x86 BUILD=debug V=0 CSTD=c99 ITA_NO_ASSERT=0
BUILD = debug
CSTD = c99
VERSION = '1.4.0'
make[1]: Entering directory `C:/IntelSWTools/ISSM_2016.2.094/workspace2/sensor_hub_106_thingspeak_sensor/bsp/drivers'
make[1]: Leaving directory `C:/IntelSWTools/ISSM_2016.2.094/workspace2/sensor_hub_106_thingspeak_sensor/bsp/drivers'
"CC debug/quark_se/x86/obj/./main.o" 
"CC debug/quark_se/x86/obj/"."/app_entry.o" 
"CC debug/quark_se/x86/obj/"."/newlib-syscalls.o" 
"CC debug/quark_se/x86/obj/radio.o" 
sensor_hub_lib/system/radio.c: In function 'radio_send_data':
sensor_hub_lib/system/radio.c:48:23: error: subscripted value is neither array nor pointer nor vector
   kkk[x]=battery_level[x];
                       ^
sensor_hub_lib/system/radio.c:44:10: error: variable 'kkk' set but not used [-Werror=unused-but-set-variable]
  uint8_t kkk[4];
          ^
cc1.exe: all warnings being treated as errors
make: *** [debug/quark_se/x86/obj/radio.o] Error 1
